# DocuVault

./: .gitignore  DEPLOYMENT_GUIDE.md  Features.md  INSTALLATION_GUIDE.md  PROJECT_DOCUMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  Readme.md  check_pdf.py  db.sqlite3  debug_rag.py  docai.ipynb  fix_dependencies.py  main.py  pyproject.toml  ragSummary.md  requirements.in  requirements.txt  requirements_rag.txt  requirements_working.txt  setup_windows.bat  setup_windows.ps1  test_rag.py  verify_libs.py
config/: settings.py  urls.py
documents/: admin.py  forms.py  models.py  rag_views.py  urls.py  views.py
documents/management/commands/: generate_dummy_data.py  initialize_dms.py
documents/migrations/: 0001_initial.py  0002_chatsession_chatmessage_documentembedding.py  0003_alter_documentversion_file.py
documents/rag/: Quick Reference regarding response.md  README.md  Readme_rag.md  __init__.py  config.py  conversation.py  document_processor.py  embeddings.py  llm_manager.py  retriever.py  vector_store.py
documents/templates/documents/: activity_log.html  advanced_search.html  base.html  bulk_index.html  category_form.html  category_list.html  chat_history.html  chat_session_detail.html  chatbot.html  dashboard.html  document_confirm_delete.html  document_detail.html  document_form.html  document_list.html  favorites_list.html  home.html  notifications_list.html  profile.html  profile_edit.html  rag_system_info.html  shared_link_form.html  shared_link_password.html  shared_link_view.html
documents/templates/rag/: chatbot.html  (+2 more)
media/chroma_db/: chroma.sqlite3
(+61 files in other folders)
