[project]
name = "docuvault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.0.20",
    "sentence-transformers>=2.2.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "pymupdf>=1.23.0",
    "pypdf>=3.17.0",
    "chromadb>=0.4.0",
    "tqdm>=4.66.0",
    "torch>=2.0.0",
    "Django>=4.2,<5.0",
    "Pillow>=10.0.0",
    "psycopg2-binary>=2.9.0",
    "python-magic>=0.4.27",
    "python-decouple>=3.8",
    "python-dotenv>=1.0.0",
    "django-cors-headers>=4.0.0",
    "pytz>=2023.3",
    "django-debug-toolbar>=4.0.0",
    "django-extensions>=3.2.0",
    "pytest>=7.4.0",
    "pytest-django>=4.5.2",
    "coverage>=7.2.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.5.0",
    "redis>=4.6.0",
    "django-redis>=5.3.0",
    "langchain>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "hf-xet>=1.2.0",
    "langchain-openai>=1.1.0",
    "dotenv>=0.9.9",
    "langchain-ollama>=1.0.0",
    "langchain-groq>=1.1.0",
]
